2010-03-14	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* audio/Midi.cc: Fixed dangerous dangling cstr pointers.
	* audio/midi_drivers/MT32EmuMidiDriver.cpp: Implemented a more robust ROM
	  and MT32 data file function for MT32Emu.

2010-03-13	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* All: Improvements to the bundle checks: Exult will now try to see if the
	  bundled file exists and try to use it only in this case.

2010-03-12	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* shapes/data_utils.h: Fixed compilation warnings in MacOS X.
	* imagewin/*: Added 16-bit and 32-bit versions of Point, Interlaced and
	  Scale2x scalers. The old 8-bit scalers are still available, but Exult
	  will use them only if it can't use the 16-bit and 32-bit versions.

2010-03-11	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* files/utils.h: Default save location in Mac OS X changed (again) to be
	  ~/Library/Application Support/Exult (issue #1377892).
	* De-hard-coding, round 3: All information about which gump a given shape
	  should display is now given by the 'container.dat' file; a default file
	  with the original game data is embedded in Exult_xx.flx. This includes
	  moving BG NPC gumps from paperdoll data; Exult/ES will do this for older
	  versions of paperdol_info.txt on load. The embedded 'container.dat', as
	  well as those written by ES, will be version 2 and include (non-editable,
	  for now ignored) font information for gumps.
	  Expanded frame powers to depend also on quality, and renamed into frame
	  flags. The reagent ring (SI) and trapped chests are examples of the new
	  frame flags in action.
	  Fields (fire/poison/sleep) are no longer hard-coded.
	  Any object can now be marked as being a 'jawbone' or a 'mirror'. Jawbones
	  will work *exactly* the same way as the SI jawbone does.
	  ES can edit this new shape information, and has many new additional built
	  in groups for shapes.vga.